# floppa

./: Cargo.toml
src/: assets.rs  ball.rs  block.rs  collisions.rs  game.rs  input.rs  main.rs  main_loop.rs  palette.rs
src/renderer/: camera.rs  color.rs  error.rs  instances.rs  mod.rs  pass.rs  pipeline.rs  shader.wgsl  sprite.rs  sprite_buffers.rs  texture.rs
src/renderer_ext/: bitmap_font.rs  context_ext.rs  mod.rs  sprite.rs
