[package]
name = "floppa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
log = "0.4.0"
winit = "0.27.4"
wgpu = "0.14.0"
pollster = "0.2.5"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "*"
chrono = "0.4.22"